syntax = "proto3";
package amparks100.registry.identity;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "identity/registration.proto";
import "identity/delegation.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/amparks100/registry/x/identity/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a registration by index.
	rpc Registration(QueryGetRegistrationRequest) returns (QueryGetRegistrationResponse) {
		option (google.api.http).get = "/amparks100/registry/identity/registration/{index}";
	}

	// Queries a list of registration items.
	rpc RegistrationAll(QueryAllRegistrationRequest) returns (QueryAllRegistrationResponse) {
		option (google.api.http).get = "/amparks100/registry/identity/registration";
	}

// Queries a delegation by index.
	rpc Delegation(QueryGetDelegationRequest) returns (QueryGetDelegationResponse) {
		option (google.api.http).get = "/amparks100/registry/identity/delegation/{index}";
	}

	// Queries a list of delegation items.
	rpc DelegationAll(QueryAllDelegationRequest) returns (QueryAllDelegationResponse) {
		option (google.api.http).get = "/amparks100/registry/identity/delegation";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetRegistrationRequest {
	  string index = 1;

}

message QueryGetRegistrationResponse {
	Registration registration = 1 [(gogoproto.nullable) = false];
}

message QueryAllRegistrationRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRegistrationResponse {
	repeated Registration registration = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDelegationRequest {
	string index = 1;
	  string dsnpId = 2;

}

message QueryGetDelegationResponse {
	Delegation delegation = 1 [(gogoproto.nullable) = false];
}

message QueryAllDelegationRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDelegationResponse {
	repeated Delegation delegation = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
